Funcionamiento con DB completo

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,10 +3,10 @@
         <section class="secListados">
             <h3>Categorias</h3>
             <ul class="listaMenu">
-                <li><a href="">Paletas</a></li>
-                <li><a href="">Marcas</a></li>
-                <li><a href="">Formas</a></li>
-                <li><a href="">Colores</a></li>
+                <li><a href="/products">Paletas</a></li>
+                <li><a href="/products/lista/marcas">Marcas</a></li>
+                <li><a href="/products/lista/formas">Formas</a></li>
+                <li><a href="/products/lista/colores">Colores</a></li>
             </ul>
         </section>
         <section class="secListados">
