--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,10 +5,10 @@
         </section>
         <section class="secMenu">
             <ul class="lista">
-                <li><a href="" class="links">Paletas</a></li>
-                <li><a href="" class="links">Marcas</a></li>
-                <li><a href="" class="links">Formas</a></li>
-                <li><a href="" class="links">Colores</a></li>
+                <li><a href="/products" class="links">Paletas</a></li>
+                <li><a href="/products/lista/marcas" class="links">Marcas</a></li>
+                <li><a href="/products/lista/formas" class="links">Formas</a></li>
+                <li><a href="/products/lista/colores" class="links">Colores</a></li>
                 <li><a href="" class="links">Contacto</a></li>
             </ul>
         </section>
