--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -16,30 +16,30 @@
             <section class="categorias-container">
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn" href="">Paletas</a>
+                        <a class="text-btn" href="/products">Paletas</a>
                     </section>
-                    <a href=""><img src="/img/paleta.jpg"></a>
+                    <a href="/products"><img src="/img/paleta.jpg"></a>
                 </article>
 
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn" href="">Marcas</a>
+                        <a class="text-btn" href="/products/lista/marcas">Marcas</a>
                     </section>
-                    <a href=""><img src="/img/marcas.jpg"></a>
+                    <a href="/products/lista/marcas"><img src="/img/marcas.jpg"></a>
                 </article>
 
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn" href="">Formas</a>
+                        <a class="text-btn" href="/products/lista/formas">Formas</a>
                     </section>
-                    <a href=""><img src="/img/formas.jpg"></a>
+                    <a href="/products/lista/formas"><img src="/img/formas.jpg"></a>
                 </article>
 
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn" href="">Colores</a>
+                        <a class="text-btn" href="/products/lista/colores">Colores</a>
                     </section>
-                    <a href=""><img src="/img/colores.jpg"></a>
+                    <a href="/products/lista/colores"><img src="/img/colores.jpg"></a>
                 </article>
             </section>
 
