--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -28,7 +28,7 @@
 
 
                     <button type="submit" class="boton">Iniciar Sesión</a></button>
-                    <button type="submit" class="botonReg"><a href="/" class="a-boton">Registrarme</a></button>
+                    <button type="submit" class="botonReg"><a href="/users/register" class="a-boton">Registrarme</a></button>
                 </section>
             </form>
 
