--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -20,6 +20,13 @@ main {
     flex-wrap: wrap;
 }
 
+main form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .info {
     display: flex;
     width: 50%;
@@ -29,7 +36,7 @@ main {
 .perfil {
     display: flex;
     border: 2px solid black;
-    width: 80%;
+    width: 90%;
     margin-top: 15px;
     margin-bottom: 15px;
     background-color: #DC191B;
