--- a/src/views/products/home_secundario.ejs
+++ b/src/views/products/home_secundario.ejs
@@ -17,7 +17,7 @@
 
                         <% for( let i = 0; i < productos.length; i++ ) { %>
                             <article>
-                                <a class="a-homesecundario" href="/products/detail/<%= productos[i].id_producto %>">
+                                <a class="a-homesecundario" href="/products/detail/<%= productos[i].idproducto %>">
                             <img src="<%= productos[i].imagen %>" alt="Producto1">
                         </a>
                                 <div>
