--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -22,7 +22,7 @@
                             <li><b>Email: </b>
                                 <%= usuario.email %>
                             </li>
-                            <% if (usuario.esAdmin == "Administrador") { %>
+                            <% if (usuario.tipos.nombre == "Administrador") { %>
                                 <li><b>Tipo de usuario: </b>Administrador</li>
                                 <% } else { %>
                                     <li><b>Tipo de usuario: </b>Comprador</li>
