Validaciones con javascript

--- a/src/views/products/create.ejs
+++ b/src/views/products/create.ejs
@@ -85,6 +85,7 @@
         </main>
 
         <%- include("../partials/footer.ejs") %>
+            <script src="/js/validacionesProductos.js"></script>
 </body>
 
 </html>
