--- a/src/views/products/modify.ejs
+++ b/src/views/products/modify.ejs
@@ -103,6 +103,7 @@
         </main>
 
         <%- include("../partials/footer.ejs") %>
+            <script src="/js/validacionesProductos.js"></script>
 </body>
 
 </html>
