--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -67,6 +67,7 @@
             </form>
         </main>
         <%- include("../partials/footer.ejs") %>
+            <script src="/js/validacionesRegister.js"></script>
 </body>
 
 </html>
